--- a/sistema-dati.ipynb
+++ b/sistema-dati.ipynb
@@ -4,47 +4,181 @@
    "cell_type": "code",
    "id": "dc232d284057225a",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-05-25T00:35:58.217942Z",
-     "start_time": "2024-05-25T00:35:57.985500Z"
-    }
+    "collapsed": true
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": 1,
    "source": "df = pd.read_csv('data.csv.bz2', names=[\"id\", \"uuid\", \"date\", \"type\", \"value\"])",
-   "id": "7c60fc5a521ef6bc"
+   "id": "7c60fc5a521ef6bc",
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-25T00:15:46.899680Z",
-     "start_time": "2024-05-25T00:15:46.223216Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "df2 = df[(df.type.between(10,19)) | (df.type==1)].drop(columns=[\"id\"])\n",
     "df2.head()"
    ],
    "id": "initial_id",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "names={\n",
+    " 1: \"steps\",\n",
+    " 10: 'sleepduration',\n",
+    " 11: 'bedin',\n",
+    " 12: 'bedout',\n",
+    " 13: 'nbawake',\n",
+    " 14: 'awakeduration',\n",
+    " 15: 'time to sleep',\n",
+    " 16: 'time to wake up',\n",
+    " 17: 'lightduration',\n",
+    " 18: 'remduration',\n",
+    " 19: 'deepduration'}\n"
+   ],
+   "id": "ef8e200fb2986430",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for col in names.values():\n",
+    "    df2[col]=None"
+   ],
+   "id": "a705eb4341549469",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for n,col in names.items():\n",
+    "    df2[col]=df2.where(df2.type==n)[\"value\"]"
+   ],
+   "id": "1bab4df157f21f46",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df2 = df2.groupby([\"uuid\",\"date\"]).max().drop(columns=[\"type\",\"value\"])",
+   "id": "d66c7d1089de41ff",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df2.to_csv('dati.csv.gz',compression='gzip')",
+   "id": "2a24621768b01a4",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:00:11.794408Z",
+     "start_time": "2024-05-25T01:59:52.967423Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "def scale(x):\n",
+    " x[\"user_minmax_steps\"]=MinMaxScaler().fit_transform(x[[\"steps\"]])\n",
+    " return x\n",
+    "\n",
+    "scalati=df2.groupby(\"uuid\").apply(scale,include_groups=False)"
+   ],
+   "id": "3f444349173a719e",
+   "outputs": [],
+   "execution_count": 35
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:00:14.605134Z",
+     "start_time": "2024-05-25T02:00:14.366407Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "scalati = scalati.rename_axis([\"uuid\",\"id\"]).reset_index().drop(columns=[\"id\"]) #per un csv più pulito\n",
+    "scalati"
+   ],
+   "id": "5c13d4d0463b8d71",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "                                       uuid        date  type     value\n",
-       "0  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01     1  10131.39\n",
-       "6  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    10      3.89\n",
-       "7  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    11     22.23\n",
-       "8  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    12      2.93\n",
-       "9  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    13      2.00"
+       "                                             uuid        date     steps  \\\n",
+       "0        1003e58667235e01b49008155604980b3900b00e  2016-07-31   3049.04   \n",
+       "1        1003e58667235e01b49008155604980b3900b00e  2016-08-01   4309.81   \n",
+       "2        1003e58667235e01b49008155604980b3900b00e  2016-08-02    255.11   \n",
+       "3        1003e58667235e01b49008155604980b3900b00e  2016-08-03   5118.07   \n",
+       "4        1003e58667235e01b49008155604980b3900b00e  2016-08-04   2228.88   \n",
+       "...                                           ...         ...       ...   \n",
+       "2160282  fffd4caa4a492ac7659eb075df52755ee36122a3  2017-02-14   3456.25   \n",
+       "2160283  fffd4caa4a492ac7659eb075df52755ee36122a3  2017-02-15   3819.76   \n",
+       "2160284  fffd4caa4a492ac7659eb075df52755ee36122a3  2017-02-16   6691.43   \n",
+       "2160285  fffd4caa4a492ac7659eb075df52755ee36122a3  2017-02-17   5366.30   \n",
+       "2160286  fffd4caa4a492ac7659eb075df52755ee36122a3  2017-02-19  12187.69   \n",
+       "\n",
+       "         sleepduration  bedin  bedout  nbawake  awakeduration  time to sleep  \\\n",
+       "0                  NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "1                11.31  22.11    9.86     2.02           0.53           0.15   \n",
+       "2                  NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "3                  NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "4                12.90  20.23    9.79     5.04           0.90           0.10   \n",
+       "...                ...    ...     ...      ...            ...            ...   \n",
+       "2160282            NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "2160283            NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "2160284            NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "2160285            NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "2160286            NaN    NaN     NaN      NaN            NaN            NaN   \n",
+       "\n",
+       "         time to wake up  lightduration  remduration  deepduration  \\\n",
+       "0                    NaN            NaN          NaN           NaN   \n",
+       "1                    0.0           7.38          NaN          3.99   \n",
+       "2                    NaN            NaN          NaN           NaN   \n",
+       "3                    NaN            NaN          NaN           NaN   \n",
+       "4                    0.0           7.91          NaN          4.94   \n",
+       "...                  ...            ...          ...           ...   \n",
+       "2160282              NaN            NaN          NaN           NaN   \n",
+       "2160283              NaN            NaN          NaN           NaN   \n",
+       "2160284              NaN            NaN          NaN           NaN   \n",
+       "2160285              NaN            NaN          NaN           NaN   \n",
+       "2160286              NaN            NaN          NaN           NaN   \n",
+       "\n",
+       "         user_minmax_steps  \n",
+       "0                 0.169272  \n",
+       "1                 0.239404  \n",
+       "2                 0.013856  \n",
+       "3                 0.284364  \n",
+       "4                 0.123650  \n",
+       "...                    ...  \n",
+       "2160282           0.214162  \n",
+       "2160283           0.236726  \n",
+       "2160284           0.414977  \n",
+       "2160285           0.332723  \n",
+       "2160286           0.756143  \n",
+       "\n",
+       "[2160287 rows x 14 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -67,141 +201,241 @@
        "      <th></th>\n",
        "      <th>uuid</th>\n",
        "      <th>date</th>\n",
-       "      <th>type</th>\n",
-       "      <th>value</th>\n",
+       "      <th>steps</th>\n",
+       "      <th>sleepduration</th>\n",
+       "      <th>bedin</th>\n",
+       "      <th>bedout</th>\n",
+       "      <th>nbawake</th>\n",
+       "      <th>awakeduration</th>\n",
+       "      <th>time to sleep</th>\n",
+       "      <th>time to wake up</th>\n",
+       "      <th>lightduration</th>\n",
+       "      <th>remduration</th>\n",
+       "      <th>deepduration</th>\n",
+       "      <th>user_minmax_steps</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10131.39</td>\n",
+       "      <td>1003e58667235e01b49008155604980b3900b00e</td>\n",
+       "      <td>2016-07-31</td>\n",
+       "      <td>3049.04</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.169272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>10</td>\n",
-       "      <td>3.89</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1003e58667235e01b49008155604980b3900b00e</td>\n",
+       "      <td>2016-08-01</td>\n",
+       "      <td>4309.81</td>\n",
+       "      <td>11.31</td>\n",
+       "      <td>22.11</td>\n",
+       "      <td>9.86</td>\n",
+       "      <td>2.02</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>0.15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.38</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>0.239404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>11</td>\n",
-       "      <td>22.23</td>\n",
+       "      <th>2</th>\n",
+       "      <td>1003e58667235e01b49008155604980b3900b00e</td>\n",
+       "      <td>2016-08-02</td>\n",
+       "      <td>255.11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.013856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2.93</td>\n",
+       "      <th>3</th>\n",
+       "      <td>1003e58667235e01b49008155604980b3900b00e</td>\n",
+       "      <td>2016-08-03</td>\n",
+       "      <td>5118.07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.284364</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
-       "      <td>2016-04-01</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2.00</td>\n",
+       "      <th>4</th>\n",
+       "      <td>1003e58667235e01b49008155604980b3900b00e</td>\n",
+       "      <td>2016-08-04</td>\n",
+       "      <td>2228.88</td>\n",
+       "      <td>12.90</td>\n",
+       "      <td>20.23</td>\n",
+       "      <td>9.79</td>\n",
+       "      <td>5.04</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.91</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.94</td>\n",
+       "      <td>0.123650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2160282</th>\n",
+       "      <td>fffd4caa4a492ac7659eb075df52755ee36122a3</td>\n",
+       "      <td>2017-02-14</td>\n",
+       "      <td>3456.25</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.214162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2160283</th>\n",
+       "      <td>fffd4caa4a492ac7659eb075df52755ee36122a3</td>\n",
+       "      <td>2017-02-15</td>\n",
+       "      <td>3819.76</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.236726</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2160284</th>\n",
+       "      <td>fffd4caa4a492ac7659eb075df52755ee36122a3</td>\n",
+       "      <td>2017-02-16</td>\n",
+       "      <td>6691.43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.414977</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2160285</th>\n",
+       "      <td>fffd4caa4a492ac7659eb075df52755ee36122a3</td>\n",
+       "      <td>2017-02-17</td>\n",
+       "      <td>5366.30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.332723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2160286</th>\n",
+       "      <td>fffd4caa4a492ac7659eb075df52755ee36122a3</td>\n",
+       "      <td>2017-02-19</td>\n",
+       "      <td>12187.69</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.756143</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>2160287 rows × 14 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-25T00:17:06.684472Z",
-     "start_time": "2024-05-25T00:17:06.681645Z"
+     "end_time": "2024-05-25T02:02:46.292129Z",
+     "start_time": "2024-05-25T02:02:16.068765Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "names={\n",
-    " 1: \"steps\",\n",
-    " 10: 'sleepduration',\n",
-    " 11: 'bedin',\n",
-    " 12: 'bedout',\n",
-    " 13: 'nbawake',\n",
-    " 14: 'awakeduration',\n",
-    " 15: 'time to sleep',\n",
-    " 16: 'time to wake up',\n",
-    " 17: 'lightduration',\n",
-    " 18: 'remduration',\n",
-    " 19: 'deepduration'}\n"
-   ],
-   "id": "ef8e200fb2986430",
+   "source": "scalati.to_csv('scalati.csv.gz',compression='gzip',index=False)",
+   "id": "5515c87438741f54",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 38
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-25T00:17:21.359938Z",
-     "start_time": "2024-05-25T00:17:20.229965Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "for col in names.values():\n",
-    "    df2[col]=None"
-   ],
-   "id": "a705eb4341549469",
    "outputs": [],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-25T00:18:01.778673Z",
-     "start_time": "2024-05-25T00:17:39.054985Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "for n,col in names.items():\n",
-    "    df2[col]=df2.where(df2.type==n)[\"value\"]"
-   ],
-   "id": "1bab4df157f21f46",
-   "outputs": [],
-   "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-25T00:18:15.263180Z",
-     "start_time": "2024-05-25T00:18:12.720239Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df2 = df2.groupby([\"uuid\",\"date\"]).max().drop(columns=[\"type\",\"value\"])",
-   "id": "d66c7d1089de41ff",
-   "outputs": [],
-   "execution_count": 8
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-25T00:23:22.259656Z",
-     "start_time": "2024-05-25T00:22:56.563579Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df2.to_csv('dati.csv.gz',compression='gzip')",
-   "id": "2a24621768b01a4",
-   "outputs": [],
-   "execution_count": 15
+   "execution_count": null,
+   "source": "",
+   "id": "7b00bb7fd683d260"
   }
  ],
  "metadata": {
