reused variables to save memory

--- a/sistema-dati.ipynb
+++ b/sistema-dati.ipynb
@@ -4,33 +4,133 @@
    "cell_type": "code",
    "id": "dc232d284057225a",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:28:51.118591Z",
+     "start_time": "2024-05-25T02:28:50.692750Z"
+    }
    },
    "source": "import pandas as pd",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:29:14.975814Z",
+     "start_time": "2024-05-25T02:28:51.119712Z"
+    }
+   },
    "cell_type": "code",
    "source": "df = pd.read_csv('data.csv.bz2', names=[\"id\", \"uuid\", \"date\", \"type\", \"value\"])",
    "id": "7c60fc5a521ef6bc",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:29:15.691882Z",
+     "start_time": "2024-05-25T02:29:14.976693Z"
+    }
+   },
    "cell_type": "code",
    "source": [
-    "df2 = df[(df.type.between(10,19)) | (df.type==1)].drop(columns=[\"id\"])\n",
-    "df2.head()"
+    "df = df[(df.type.between(10,19)) | (df.type==1)].drop(columns=[\"id\"])\n",
+    "df.head()"
    ],
    "id": "initial_id",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "                                       uuid        date  type     value\n",
+       "0  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01     1  10131.39\n",
+       "6  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    10      3.89\n",
+       "7  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    11     22.23\n",
+       "8  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    12      2.93\n",
+       "9  2bc16eda651db5936cd31e735c815296fc1579d9  2016-04-01    13      2.00"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>uuid</th>\n",
+       "      <th>date</th>\n",
+       "      <th>type</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10131.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3.89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>22.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2bc16eda651db5936cd31e735c815296fc1579d9</td>\n",
+       "      <td>2016-04-01</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:29:27.418436Z",
+     "start_time": "2024-05-25T02:29:27.415729Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "names={\n",
@@ -48,34 +148,44 @@
    ],
    "id": "ef8e200fb2986430",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:29:33.163843Z",
+     "start_time": "2024-05-25T02:29:31.661198Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "for col in names.values():\n",
-    "    df2[col]=None"
+    "    df[col]=None"
    ],
    "id": "a705eb4341549469",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-25T02:30:34.904545Z",
+     "start_time": "2024-05-25T02:30:11.994529Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "for n,col in names.items():\n",
-    "    df2[col]=df2.where(df2.type==n)[\"value\"]"
+    "    df[col]=df.where(df.type==n)[\"value\"]"
    ],
    "id": "1bab4df157f21f46",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 10
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df2 = df2.groupby([\"uuid\",\"date\"]).max().drop(columns=[\"type\",\"value\"])",
+   "source": "df = df.groupby([\"uuid\",\"date\"]).max().drop(columns=[\"type\",\"value\"])",
    "id": "d66c7d1089de41ff",
    "outputs": [],
    "execution_count": null
@@ -83,7 +193,15 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "df2.to_csv('dati.csv.gz',compression='gzip')",
+   "outputs": [],
+   "execution_count": null,
+   "source": "df",
+   "id": "46b35b314bab3d15"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "df.to_csv('dati.csv.gz',compression='gzip')",
    "id": "2a24621768b01a4",
    "outputs": [],
    "execution_count": null
@@ -103,7 +221,7 @@
     " x[\"user_minmax_steps\"]=MinMaxScaler().fit_transform(x[[\"steps\"]])\n",
     " return x\n",
     "\n",
-    "scalati=df2.groupby(\"uuid\").apply(scale,include_groups=False)"
+    "df=df.groupby(\"uuid\").apply(scale,include_groups=False)"
    ],
    "id": "3f444349173a719e",
    "outputs": [],
@@ -118,8 +236,8 @@
    },
    "cell_type": "code",
    "source": [
-    "scalati = scalati.rename_axis([\"uuid\",\"id\"]).reset_index().drop(columns=[\"id\"]) #per un csv più pulito\n",
-    "scalati"
+    "df = df.rename_axis([\"uuid\",\"id\"]).reset_index().drop(columns=[\"id\"]) #per un csv più pulito\n",
+    "df"
    ],
    "id": "5c13d4d0463b8d71",
    "outputs": [
@@ -424,7 +542,7 @@
     }
    },
    "cell_type": "code",
-   "source": "scalati.to_csv('scalati.csv.gz',compression='gzip',index=False)",
+   "source": "df.to_csv('scalati.csv.gz',compression='gzip',index=False)",
    "id": "5515c87438741f54",
    "outputs": [],
    "execution_count": 38
