--- a/scripts/modello-passi.ipynb
+++ b/scripts/modello-passi.ipynb
@@ -46,8 +46,8 @@
     },
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2024-05-25T01:35:57.040977Z",
-     "start_time": "2024-05-25T01:35:54.765763Z"
+     "end_time": "2024-05-25T11:04:08.899954Z",
+     "start_time": "2024-05-25T11:04:06.728806Z"
     }
    },
    "outputs": [
@@ -55,20 +55,20 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-25 03:35:55.205883: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-05-25 03:35:55.208850: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-05-25 03:35:55.251432: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-05-25 13:04:07.133983: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-25 13:04:07.136615: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2024-05-25 13:04:07.177182: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-05-25 03:35:56.098309: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-05-25 13:04:08.090760: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "source": [
-    "df = pd.read_csv(\"scalati.csv.gz\")[:1000000][[\"uuid\",\"user_minmax_steps\"]]\n",
+    "df = pd.read_csv(\"../data/scalati.csv.gz\")[:1000000][[\"uuid\",\"user_minmax_steps\"]]\n",
     "df.head()"
    ],
    "metadata": {
@@ -81,8 +81,8 @@
     },
     "trusted": true,
     "ExecuteTime": {
-     "end_time": "2024-05-25T01:35:59.569518Z",
-     "start_time": "2024-05-25T01:35:57.042455Z"
+     "end_time": "2024-05-25T11:04:11.059887Z",
+     "start_time": "2024-05-25T11:04:08.901060Z"
     }
    },
    "outputs": [
@@ -150,12 +150,12 @@
        "</div>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
@@ -877,7 +877,7 @@
     }
    },
    "cell_type": "code",
-   "source": "model.save(\"modello-passi.keras\")",
+   "source": "model.save(\"../models/modello-passi.keras\")",
    "outputs": [],
    "execution_count": 11
   },
