made a framework in order to try more stuff more easily

--- a/scripts/0-converti-dati.ipynb
+++ b/scripts/0-converti-dati.ipynb
@@ -9,34 +9,33 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": "import pandas as pd",
-   "id": "f810c4e69d238522"
+   "id": "f810c4e69d238522",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": "df = pd.read_csv('../data/data.csv.bz2', names=[\"id\", \"uuid\", \"date\", \"type\", \"value\"])",
-   "id": "154e167ae36afa1b"
+   "id": "154e167ae36afa1b",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": [
     "df = df[(df.type.between(10, 19)) | (df.type == 1)].drop(columns=[\"id\"])  #1 per i passi e 10..19 per i dati sul sonno\n",
     "df.head()"
    ],
-   "id": "70fcd6b93292b200"
+   "id": "70fcd6b93292b200",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": [
     "names = {\n",
@@ -53,60 +52,63 @@
     "    19: 'deepduration'\n",
     "}"
    ],
-   "id": "d8b920dd6bf0210c"
+   "id": "d8b920dd6bf0210c",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": [
     "for col in names.values():  # Aggiungo una colonna per ognuna delle feature rilevanti\n",
     "    df[col] = None"
    ],
-   "id": "9b6ba3e3d78a7ad"
+   "id": "9b6ba3e3d78a7ad",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": [
-    "for n,col in names.items(): # Su ognuna delle righe copio il valore dal campo \"value\" a quello della feature corrispondente al tipo\n",
-    "    df[col]=df.where(df.type==n)[\"value\"]\n",
+    "for n, col in names.items():  # Su ognuna delle righe copio il valore dal campo \"value\" a quello della feature corrispondente al tipo\n",
+    "    df[col] = df.where(df.type == n)[\"value\"]\n",
     "df.head()"
    ],
-   "id": "12d7c5bddf445c7f"
+   "id": "12d7c5bddf445c7f",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": [
-    "df = df.groupby([\"uuid\",\"date\"]).max().drop(columns=[\"type\",\"value\"]) # \"condenso\" le righe relative alla stessa data e allo stesso utente, facendone una sola che contiene tutti i dati. Sono orgoglioso di aver trovato da solo questo modo molto efficiente per ottenere il dataset in forma tabellare densa\n",
+    "df = df.groupby([\"uuid\", \"date\"]).max().drop(columns=[\"type\",\n",
+    "                                                      \"value\"])  # \"condenso\" le righe relative alla stessa data e allo stesso utente, facendone una sola che contiene tutti i dati. Sono orgoglioso di aver trovato da solo questo modo molto efficiente per ottenere il dataset in forma tabellare densa\n",
     "df.head()"
    ],
-   "id": "93f298ee9f289436"
+   "id": "93f298ee9f289436",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
    "source": [
-    "df = df.rename_axis([\"uuid\",\"date\"]).reset_index() # Per un csv più pulito, infatti il groupby aggiunge una colonna che non voglio\n",
+    "df = df.rename_axis(\n",
+    "    [\"uuid\", \"date\"]).reset_index()  # Per un csv più pulito, infatti il groupby aggiunge una colonna che non voglio\n",
     "df.head()"
    ],
-   "id": "bdc04ac986fde33b"
+   "id": "bdc04ac986fde33b",
+   "outputs": []
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "df.to_csv('../data/dati.csv.gz',compression='gzip',index=False)",
-   "id": "45ce28044cfd6173"
+   "source": "df.to_csv('../data/dati.csv.gz', compression='gzip', index=False)",
+   "id": "45ce28044cfd6173",
+   "outputs": []
   }
  ],
  "metadata": {
