--- a/scripts/2-punteggio-sonno.ipynb
+++ b/scripts/2-punteggio-sonno.ipynb
@@ -1,127 +1,69 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Noto che la remduration manca praticamente sempre, mentre il resto dei dati sul sonno sono presenti sempre tutti insieme. Trovo un modo per calcolare il punteggio che faccia uso di questi dati.",
-   "id": "e029b5be35169373"
+   "id": "e029b5be35169373",
+   "metadata": {},
+   "source": [
+    "Noto che la remduration manca praticamente sempre, mentre il resto dei dati sul sonno sono presenti sempre tutti insieme. Trovo un modo per calcolare il punteggio che faccia uso di questi dati."
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c483115e8a930493",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T10:42:25.473494Z",
      "start_time": "2024-05-29T10:42:25.224288Z"
     }
    },
-   "cell_type": "code",
-   "source": "import pandas as pd",
-   "id": "c483115e8a930493",
    "outputs": [],
-   "execution_count": 1
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c47a16eb2f3ed992",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T10:42:27.287906Z",
      "start_time": "2024-05-29T10:42:25.474686Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "steps = pd.read_csv(\"../data/dati.csv.gz\")[\n",
     "    [\"uuid\", \"date\", \"steps\", 'sleepduration', 'lightduration',\n",
     "     'deepduration']]  # Il dataset qui è abbastanza denso, per ora può andare bene eliminare le righe con valori mancanti"
-   ],
-   "id": "c47a16eb2f3ed992",
-   "outputs": [],
-   "execution_count": 2
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dc5e1bc4",
+   "metadata": {},
+   "source": [
+    "Questo punteggio moltiplica 3 diverse penalità, che dipendono rispettivamente da:\n",
+    "- Lo scostamento dalla percentuale ottimale di sonno profondo\n",
+    "- Lo scostamento dalla percentuale ottimale di sonno leggero\n",
+    "- Lo scostamento dalla durata media del sonno dell'utente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "5803953ef3dcb1eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T10:42:41.693690Z",
      "start_time": "2024-05-29T10:42:30.425344Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "def sleep_score(x):\n",
-    "    optimal_light_ratio = .5\n",
-    "    optimal_deep_ratio = .25\n",
-    "\n",
-    "    # Penalità sul light sleep X Penalità sul deep sleep X Penalità sulla durata del sonno\n",
-    "    x[\"sleep_score\"] = (1 - abs(x[\"lightduration\"] / x[\"sleepduration\"] - optimal_light_ratio)) * (\n",
-    "            1 - abs(x[\"deepduration\"] / x[\"sleepduration\"] - optimal_deep_ratio)) * (\n",
-    "                               1 - abs(x[\"sleepduration\"] / x[\"sleepduration\"].mean() - 1))\n",
-    "    return x\n",
-    "\n",
-    "\n",
-    "steps = steps.groupby(\"uuid\").apply(sleep_score, include_groups=False)\n",
-    "steps.sample(100)"
-   ],
-   "id": "5803953ef3dcb1eb",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "                                                        date     steps  \\\n",
-       "uuid                                                                     \n",
-       "cbaafc481739098887091013283cef8cecfe52a5 1687781  2016-08-17   7102.18   \n",
-       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912  2016-07-19   4740.14   \n",
-       "54e793db1423c23d53e6af66723954ecb58fc840 632011   2017-01-19   8582.23   \n",
-       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997   2016-06-25   3292.81   \n",
-       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756  2016-05-14       NaN   \n",
-       "...                                                      ...       ...   \n",
-       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598   2016-06-21   7872.70   \n",
-       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945  2016-12-03  10948.27   \n",
-       "ca567dd566699b683c7b6183dd8879149f23d985 1675832  2016-10-21   4854.02   \n",
-       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575   2016-05-06   5587.40   \n",
-       "4e10fee95da1d3447472871358a82284e904dd64 570780   2016-05-24   9594.62   \n",
-       "\n",
-       "                                                  sleepduration  \\\n",
-       "uuid                                                              \n",
-       "cbaafc481739098887091013283cef8cecfe52a5 1687781            NaN   \n",
-       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912           8.05   \n",
-       "54e793db1423c23d53e6af66723954ecb58fc840 632011            8.56   \n",
-       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997            6.23   \n",
-       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756           4.22   \n",
-       "...                                                         ...   \n",
-       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598            5.04   \n",
-       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945           3.00   \n",
-       "ca567dd566699b683c7b6183dd8879149f23d985 1675832           7.24   \n",
-       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575            8.23   \n",
-       "4e10fee95da1d3447472871358a82284e904dd64 570780             NaN   \n",
-       "\n",
-       "                                                  lightduration  deepduration  \\\n",
-       "uuid                                                                            \n",
-       "cbaafc481739098887091013283cef8cecfe52a5 1687781            NaN           NaN   \n",
-       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912           5.10          2.89   \n",
-       "54e793db1423c23d53e6af66723954ecb58fc840 632011            4.18          4.37   \n",
-       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997            4.05          2.15   \n",
-       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756           2.61          0.92   \n",
-       "...                                                         ...           ...   \n",
-       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598            3.59          1.43   \n",
-       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945           1.85          1.14   \n",
-       "ca567dd566699b683c7b6183dd8879149f23d985 1675832           2.33          4.90   \n",
-       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575            4.58          3.67   \n",
-       "4e10fee95da1d3447472871358a82284e904dd64 570780             NaN           NaN   \n",
-       "\n",
-       "                                                  sleep_score  \n",
-       "uuid                                                           \n",
-       "cbaafc481739098887091013283cef8cecfe52a5 1687781          NaN  \n",
-       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912     0.727263  \n",
-       "54e793db1423c23d53e6af66723954ecb58fc840 632011      0.651407  \n",
-       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997      0.750533  \n",
-       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756     0.457056  \n",
-       "...                                                       ...  \n",
-       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598      0.559551  \n",
-       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945     0.273125  \n",
-       "ca567dd566699b683c7b6183dd8879149f23d985 1675832     0.459562  \n",
-       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575      0.676290  \n",
-       "4e10fee95da1d3447472871358a82284e904dd64 570780           NaN  \n",
-       "\n",
-       "[100 rows x 6 columns]"
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -275,6 +217,65 @@
        "</table>\n",
        "<p>100 rows × 6 columns</p>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                                        date     steps  \\\n",
+       "uuid                                                                     \n",
+       "cbaafc481739098887091013283cef8cecfe52a5 1687781  2016-08-17   7102.18   \n",
+       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912  2016-07-19   4740.14   \n",
+       "54e793db1423c23d53e6af66723954ecb58fc840 632011   2017-01-19   8582.23   \n",
+       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997   2016-06-25   3292.81   \n",
+       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756  2016-05-14       NaN   \n",
+       "...                                                      ...       ...   \n",
+       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598   2016-06-21   7872.70   \n",
+       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945  2016-12-03  10948.27   \n",
+       "ca567dd566699b683c7b6183dd8879149f23d985 1675832  2016-10-21   4854.02   \n",
+       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575   2016-05-06   5587.40   \n",
+       "4e10fee95da1d3447472871358a82284e904dd64 570780   2016-05-24   9594.62   \n",
+       "\n",
+       "                                                  sleepduration  \\\n",
+       "uuid                                                              \n",
+       "cbaafc481739098887091013283cef8cecfe52a5 1687781            NaN   \n",
+       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912           8.05   \n",
+       "54e793db1423c23d53e6af66723954ecb58fc840 632011            8.56   \n",
+       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997            6.23   \n",
+       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756           4.22   \n",
+       "...                                                         ...   \n",
+       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598            5.04   \n",
+       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945           3.00   \n",
+       "ca567dd566699b683c7b6183dd8879149f23d985 1675832           7.24   \n",
+       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575            8.23   \n",
+       "4e10fee95da1d3447472871358a82284e904dd64 570780             NaN   \n",
+       "\n",
+       "                                                  lightduration  deepduration  \\\n",
+       "uuid                                                                            \n",
+       "cbaafc481739098887091013283cef8cecfe52a5 1687781            NaN           NaN   \n",
+       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912           5.10          2.89   \n",
+       "54e793db1423c23d53e6af66723954ecb58fc840 632011            4.18          4.37   \n",
+       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997            4.05          2.15   \n",
+       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756           2.61          0.92   \n",
+       "...                                                         ...           ...   \n",
+       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598            3.59          1.43   \n",
+       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945           1.85          1.14   \n",
+       "ca567dd566699b683c7b6183dd8879149f23d985 1675832           2.33          4.90   \n",
+       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575            4.58          3.67   \n",
+       "4e10fee95da1d3447472871358a82284e904dd64 570780             NaN           NaN   \n",
+       "\n",
+       "                                                  sleep_score  \n",
+       "uuid                                                           \n",
+       "cbaafc481739098887091013283cef8cecfe52a5 1687781          NaN  \n",
+       "a1d964e82c76b43998ea38af40e66cf85b474089 1313912     0.727263  \n",
+       "54e793db1423c23d53e6af66723954ecb58fc840 632011      0.651407  \n",
+       "44245c6fc04c6331c74a95ca92c8dfccefe530b1 484997      0.750533  \n",
+       "83116cdd467e5a2bc01067818c3ff163215d2c6a 1033756     0.457056  \n",
+       "...                                                       ...  \n",
+       "690b0266e5cf2d04b03d176d9cfa98cc11b354bc 812598      0.559551  \n",
+       "f632790525b8dc128c1f060e9884012f6bffc26c 2065945     0.273125  \n",
+       "ca567dd566699b683c7b6183dd8879149f23d985 1675832     0.459562  \n",
+       "4e7b49b15b3255998667d537d90a233174e1e9bf 573575      0.676290  \n",
+       "4e10fee95da1d3447472871358a82284e904dd64 570780           NaN  \n",
+       "\n",
+       "[100 rows x 6 columns]"
       ]
      },
      "execution_count": 3,
@@ -282,40 +283,35 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "source": [
+    "def sleep_score(x):\n",
+    "    optimal_light_ratio = .5\n",
+    "    optimal_deep_ratio = .25\n",
+    "\n",
+    "    # Penalità sul light sleep X Penalità sul deep sleep X Penalità sulla durata del sonno\n",
+    "    x[\"sleep_score\"] = (1 - abs(x[\"lightduration\"] / x[\"sleepduration\"] - optimal_light_ratio)) * (\n",
+    "            1 - abs(x[\"deepduration\"] / x[\"sleepduration\"] - optimal_deep_ratio)) * (\n",
+    "                               1 - abs(x[\"sleepduration\"] / x[\"sleepduration\"].mean() - 1))\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "steps = steps.groupby(\"uuid\").apply(sleep_score, include_groups=False)\n",
+    "steps.sample(100)"
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6b0fbc2e3daffa12",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T10:42:41.839713Z",
      "start_time": "2024-05-29T10:42:41.694717Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "steps = steps.rename_axis([\"uuid\", \"id\"]).reset_index().drop(\n",
-    "    columns=[\"id\"])  # Per un csv più pulito, infatti il groupby aggiunge una colonna che non voglio\n",
-    "steps.head()"
-   ],
-   "id": "6b0fbc2e3daffa12",
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "                                       uuid        date    steps  \\\n",
-       "0  1003e58667235e01b49008155604980b3900b00e  2016-07-31  3049.04   \n",
-       "1  1003e58667235e01b49008155604980b3900b00e  2016-08-01  4309.81   \n",
-       "2  1003e58667235e01b49008155604980b3900b00e  2016-08-02   255.11   \n",
-       "3  1003e58667235e01b49008155604980b3900b00e  2016-08-03  5118.07   \n",
-       "4  1003e58667235e01b49008155604980b3900b00e  2016-08-04  2228.88   \n",
-       "\n",
-       "   sleepduration  lightduration  deepduration  sleep_score  \n",
-       "0            NaN            NaN           NaN          NaN  \n",
-       "1          11.31           7.38          3.99     0.547576  \n",
-       "2            NaN            NaN           NaN          NaN  \n",
-       "3            NaN            NaN           NaN          NaN  \n",
-       "4          12.90           7.91          4.94     0.415384  "
-      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -398,6 +394,21 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
+      ],
+      "text/plain": [
+       "                                       uuid        date    steps  \\\n",
+       "0  1003e58667235e01b49008155604980b3900b00e  2016-07-31  3049.04   \n",
+       "1  1003e58667235e01b49008155604980b3900b00e  2016-08-01  4309.81   \n",
+       "2  1003e58667235e01b49008155604980b3900b00e  2016-08-02   255.11   \n",
+       "3  1003e58667235e01b49008155604980b3900b00e  2016-08-03  5118.07   \n",
+       "4  1003e58667235e01b49008155604980b3900b00e  2016-08-04  2228.88   \n",
+       "\n",
+       "   sleepduration  lightduration  deepduration  sleep_score  \n",
+       "0            NaN            NaN           NaN          NaN  \n",
+       "1          11.31           7.38          3.99     0.547576  \n",
+       "2            NaN            NaN           NaN          NaN  \n",
+       "3            NaN            NaN           NaN          NaN  \n",
+       "4          12.90           7.91          4.94     0.415384  "
       ]
      },
      "execution_count": 4,
@@ -405,34 +416,42 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "source": [
+    "steps = steps.rename_axis([\"uuid\", \"id\"]).reset_index().drop(\n",
+    "    columns=[\"id\"])  # Per un csv più pulito, infatti il groupby aggiunge una colonna che non voglio\n",
+    "steps.head()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "Non ho più bisogno degli altri dati, mi tengo solo quelli sui passi e sulla qualità del sonno.",
-   "id": "5e6baa4af54cdd25"
+   "id": "5e6baa4af54cdd25",
+   "metadata": {},
+   "source": [
+    "Non ho più bisogno degli altri dati, mi tengo solo quelli sui passi e sulla qualità del sonno."
+   ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "85d2bdc4059a88c5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-05-29T10:42:53.374622Z",
      "start_time": "2024-05-29T10:42:41.840707Z"
     }
    },
-   "cell_type": "code",
-   "source": "steps[[\"uuid\", \"date\", \"steps\", \"sleep_score\"]].to_csv(\"../data/valutati.csv.gz\", index=False)",
-   "id": "85d2bdc4059a88c5",
    "outputs": [],
-   "execution_count": 5
+   "source": [
+    "steps[[\"uuid\", \"date\", \"steps\", \"sleep_score\"]].to_csv(\"../data/valutati.csv.gz\", index=False)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "4cd51648449de489"
+   "id": "4cd51648449de489",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
